--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,15 +3,17 @@ repos:
     rev: v4.0.1
     hooks:
       - id: trailing-whitespace
-        language: python
+        files: ^Problems/
+        types: [python]
       - id: end-of-file-fixer
-        language: python
+        files: ^Problems/
+        types: [python]
       - id: check-yaml
-        language: python
   - repo: https://github.com/PyCQA/flake8
     rev: 4.0.1
     hooks:
       - id: flake8
+        exclude: 'add_problem.py'
   - repo: https://github.com/pre-commit/mirrors-autopep8
     rev: v1.5.7
     hooks:
