--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,11 @@ repos:
         files: ^Problems/
         types: [python]
       - id: check-yaml
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.29.1
+    hooks:
+      - id: pyupgrade
+        args: ['--py38-plus']
   - repo: https://github.com/pre-commit/mirrors-autopep8
     rev: v1.5.7
     hooks:
