--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,11 +3,9 @@ repos:
     rev: v4.0.1
     hooks:
       - id: trailing-whitespace
-        files: ^Problems/
-        types: [python]
+        types_or: [python, markdown]
       - id: end-of-file-fixer
-        files: ^Problems/
-        types: [python]
+        types_or: [python, markdown]
       - id: check-yaml
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.29.1
